临时保存。增加资源，增加弹框和finalize指令，编译有问题。

--- a/resources/dialoglib.qrc
+++ b/resources/dialoglib.qrc
@@ -1,5 +1,8 @@
 <RCC>
     <qresource prefix="/dialoglib">
         <file>zh_CH.qm</file>
+        <file>icon-a.png</file>
+        <file>icon-default.png</file>
+        <file>stylesheet.qss</file>
     </qresource>
 </RCC>
